fix frozenness when clicking sort on a column that wasnt in the column list

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 		<h2>Users</h2>
 		<table class="grid users" action="ajax.php">
 			<tr>	
-				<!--<th col="thumb" width="50" href="http://google.com?q={{columns.Title}}"></th>-->
+				<th col="thumb" width="50" type="image" href="http://google.com?q={{columns.Title}}"></th>
 				<th col="Title"	width="200" href="http://google.com?q={{value}}">Title</th>
 				<th col="Price" type="money">Price</th>
 				<th col="TutorialID"  type="text">TutorialID</th>
