you can no longer type in giant numbers into the pager box to break it

--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
 					checkboxes: true,
 					deleting : true
 				}).on("loadComplete",function(e) {
-					console.log("loadComplete", this.instance);
+					//console.log("loadComplete", this.instance);
 				}).on("cellClick",function(e, $cell) {
-					console.log("cell",$cell);
+					//console.log("cell",$cell);
 				}).on("rowCheck",function(e, $checkbox) {
-					console.log("rowCheck",$checkbox);
+					//console.log("rowCheck",$checkbox);
 				}).on("rowClick",function(e, $rows) {
-					console.log("rowClick",$rows);
+					//console.log("rowClick",$rows);
 				});
 	
 			});
