--- a/index.html
+++ b/index.html
@@ -2,13 +2,9 @@
 <html lang="en">
 	<head>
 		
-
 		<link rel="stylesheet" href="bootstrap/css/bootstrap.css"/>
-
 		<link rel="stylesheet" href="grid.css" title="openJsGrid"/>
-		<!--<link rel="stylesheet" href="jquery-ui/css/smoothness/jquery-ui-1.8.22.custom.css"/>-->
 		<script src="jquery.js" type="text/javascript"></script>
-		<!--<script src="jquery-ui/js/jquery-ui-1.8.22.custom.min.js" type="text/javascript"></script>-->
 		<script src="root.js"></script>
 		<script src="grid.js"></script>
 		
@@ -25,8 +21,7 @@
 					nRowsShowing : 10,
 					width: 800,
 					rowNumbers: true,
-					checkboxes: true,
-					deleting : true,
+					checkboxes: true
 					cellTypes : {
 			        	"hashBang": function(value, columnOpts, grid) {
 			             	return {
