--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					nRowsShowing : 10,
 					width: 800,
 					rowNumbers: true,
-					checkboxes: true
+					checkboxes: true,
 					cellTypes : {
 			        	"hashBang": function(value, columnOpts, grid) {
 			             	return {
