--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@
 					nRowsShowing : 10,
 					width: 800,
 					rowNumbers: true,
-					checkboxes: true
+					checkboxes: true,
 					cellTypes : {
 			        	"hashBang": function(value, columnOpts, grid) {
+			        		console.log(value, columnOpts, grid);
 			             	return {
 			                	cellClass: "",
 			                	cellValue: "/#!/"+value
